chore(deploy): local deployment changes before apache sync
Snapshot of the working-tree deployment work (user permissions, GPU model
selection, CU SSH terminal, k8s templates, CU dockerfile) so the tree is
clean for the apache/texera sync.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>